--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -17,7 +17,12 @@
         "stm32f4xx_hal_usart.h": "c",
         "stm32f4xx_hal_gpio.h": "c",
         "semphr.h": "c",
-        "string.h": "c"
+        "string.h": "c",
+        "random": "c",
+        "rh_app.h": "c",
+        "ui.h": "c",
+        "ui_helpers.h": "c",
+        "rh_app_interface.h": "c"
     },
 
 
